<resources>
    <string name="app_name">Aisle Demo Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="get_otp">Get OTP</string>
    <string name="enter_your_phone_number">Enter Your \nPhone Number</string>
    <string name="string_continue">Continue</string>
    <string name="mobile_code">+91</string>
    <string name="mobile_no">9999999999</string>
    <string name="enter_the_otp">Enter the \nOTP</string>
    <string name="mobile_otp">9999</string>
    <string name="timer_count">00:00</string>
    <string name="notes">Notes</string>
    <string name="personal_messages_to_you">Personal messages to you</string>
    <string name="tap_to_review_50_notes">Tap to review 50+ notes</string>
    <string name="interested_in_you">Interested In You</string>
    <string name="premium_members_can_nview_all_their_likes_at_once">Premium members can \nview all their likes at once</string>
    <string name="upgrade">Upgrade</string>
</resources>