<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".fragments.PhoneScreenFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/get_otp"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_your_phone_number"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <EditText
                android:id="@+id/edt_mobile_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="phone"
                android:background="@drawable/edit_text_border"
                android:hint="@string/mobile_code"
                android:inputType="text"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edt_mobile_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_toEndOf="@id/edt_mobile_code"
                android:background="@drawable/edit_text_border"
                android:hint="@string/mobile_no"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:inputType="number"
                android:autofillHints="phone"/>
        </RelativeLayout>

        <TextView
            android:id="@+id/btn_continue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_continue_bg"
            android:text="@string/string_continue"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginVertical="20dp"/>
    </LinearLayout>

</FrameLayout>