<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.NotesFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/notes"
            android:textColor="@color/black"
            android:textSize="27sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/personal_messages_to_you"
            android:textColor="@color/black"
            android:textSize="27sp"
            android:textStyle="normal" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="10dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/iv_main_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/ic_launcher_background"
                app:shapeAppearanceOverlay="@style/roundedCornersImageView" />

            <TextView
                android:id="@+id/txt_name_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Meena,23"
                android:textColor="@color/purple_500"
                android:layout_marginStart="10dp"
                android:layout_above="@id/txt_descp"/>
            <TextView
                android:id="@+id/txt_descp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tap_to_review_50_notes"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/purple_500" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp">

            <TextView
                android:id="@+id/txt_interested"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/interested_in_you"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="24sp"
                android:layout_marginStart="10dp" />
            <TextView
                android:id="@+id/txt_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/premium_members_can_nview_all_their_likes_at_once"
                android:layout_below="@id/txt_interested"
                android:layout_marginStart="10dp"
                android:textSize="18sp"
                android:textColor="#CACACA" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="12dp"
                android:layout_toEndOf="@id/txt_interested"
                android:background="@drawable/ic_continue_bg"
                android:gravity="center"
                android:text="@string/upgrade" />
        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="2"
            tools:listitem="@layout/item_recyclerview"/>
    </LinearLayout>
</FrameLayout>