<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".fragments.OtpFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/txt_mobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="21sp"
                android:textStyle="bold"
                app:drawableEndCompat="@drawable/ic_edit_24"
                tools:text="+91 9999999999 " />


        </RelativeLayout>

        <TextView
            android:id="@+id/txt_get_otp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_the_otp"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edt_mobile_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:autofillHints="phone"
            android:background="@drawable/edit_text_border"
            android:hint="@string/mobile_otp"
            android:inputType="numberSigned"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp">

            <TextView
                android:id="@+id/btn_continue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:background="@drawable/ic_continue_bg"
                android:gravity="center"
                android:text="@string/string_continue"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/btn_continue"
                android:gravity="center"
                android:layout_marginStart="10dp"
                android:text="@string/timer_count"
                android:textColor="@color/black"
                android:textSize="23sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </LinearLayout>
</FrameLayout>